--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
        "illuminate/database": "*"
     },
     "autoload": {
-        "psr-4": {"Ljw\\Restful": "src/Restful"}
+        "psr-4": {"Ljw\\Restful\\": "src/Restful"}
     }
    
 
