--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/database": "*"
+        "illuminate/database": "5.3.*"
     },
     "autoload": {
         "psr-4": {"Ljw\\Restful\\": "src/Restful"}
